# auth_app

./: Cargo.toml  README.md  compose.override.yml  compose.yml  docker.sh
.github/workflows/: prod.yml
app_service/: Cargo.toml  Dockerfile
app_service/src/: main.rs
auth_service/: .env  Cargo.toml  Dockerfile
auth_service/src/: app.rs  app_state.rs  lib.rs  main.rs  services.rs  user.rs
auth_service/src/api_handlers/: login.rs  signup.rs  verify_2fa.rs
auth_service/src/app/: config.rs  email_client.rs  state.rs
auth_service/src/db/: users.rs
auth_service/src/domain/: creds.rs  data_stores.rs  error.rs  mod.rs  user.rs
auth_service/src/route_handlers/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth_service/src/routes/: login.rs  logout.rs  signup.rs  verify_token.rs
auth_service/src/services/: api.rs  auth.rs  constants.rs  mod.rs  postgres_user_store.rs  postmark_email_client.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs  tokens.rs  tracing.rs  two_fa.rs  user_data_store.rs
auth_service/src/user/: credentials.rs  store.rs
auth_service/src/utils/: auth.rs  constants.rs
auth_service/tests/api/: login.rs  logout.rs  main.rs  root.rs  signup.rs  utils.rs  verify_2fa.rs  verify_token.rs
src/: main.rs
