[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"
authros = ["Seacrest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
reqwest = {version = "0.12.4", default-features = false, features = ["json"]}


[dev-dependencies]
