[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"
authros = ["Seacrest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
reqwest = {version = "0.12.4", default-features = false, features = ["json", "cookies"]}
async-trait = "0.1.78"
validator = {version= "0.18.1", features = ["derive"]}
axum-extra = { version = "0.9.2", features = ["cookie"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "offline", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[dev-dependencies]
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
